infra/k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: server-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: server

  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: hvitoi/vivo-server
---
apiVersion: v1
kind: Service

metadata:
  name: server-svc

spec:
  type: ClusterIP

  selector:
    app: server

  ports:
    - name: server
      protocol: TCP
      port: 3001
      targetPort: 3001
