infra/k8s/ingress-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'

spec:
  rules:
    - http:
        paths:
          # Server route
          - path: /api/?(.*)
            backend:
              serviceName: server-svc
              servicePort: 3001
          # Client route
          - path: /?(.*)
            backend:
              serviceName: client-svc
              servicePort: 3000
